# SoundEffect

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/jianjin33/soundeffect/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  common_platform.cpp  effect-lib.cpp  effects.cpp
app/src/main/java/com/jianjin33/soundeffect/: CustomActivity.java  EffectProcess.java  MainActivity.java  SpectrumDrawView.java
app/src/main/res/drawable/: selector_play_btn.xml
app/src/main/res/layout/: activity_custom.xml
app/src/test/java/com/jianjin33/soundeffect/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
